syntax = "proto3";

option csharp_namespace = "GrpcApi";

package productService;

import "models.proto";

service ProductService {
  rpc CreateProducts (ProductsRequest) returns (ProductsResponse);
}

message ProductsRequest {
  repeated models.AddProduct products = 1;
}

message ProductsResponse {
  repeated models.Product products = 1;
}
